# market-lens

./: .gitignore  COPILOT_PUSH_REPORT.md  DEPLOYMENT_PIPELINE_TEST_REPORT.md  LICENSE  README.md  RELEASE_CHECKLIST_v0.6.0.md  pyproject.toml
.github/workflows/: ci.yml
Protocols/: DKP-PTL-REG Implementation Roadmap.md  DKP-PTL-REG-001.md  DKP-PTL-REG-CLIENT-001.md  DKP-PTL-REG-CONSTANTS-001.md  DKP-PTL-REG-DATA-001.md  DKP-PTL-REG-GOV-001.md  DKP-PTL-REG-REFERENCE-001.md  DKP-PTL-REG-THREAT-001.md
api/: __init__.py  deps.py  main.py  schemas.py
artifact_registry/: Artifact_Registry_v0.6.json
artifacts/: Artifact_Registry_v0.6.json
deploy/docs/: COPILOT_DEPLOYMENT_REPORT.md  DEPLOY_API.md  DEPLOY_NGINX.md  DEPLOY_NGINX_SERVER_STEPS.md
deploy/nginx/: market-lens-api-location.conf
deploy/scripts/: init_queue_dirs.sh  install_systemd_services.sh  run_api_local.sh  show_nginx_api_snippet.sh  show_nginx_target_info.sh  verify_api.sh  (+1 more)
docs/: RELEASE_AUDIT_RUNBOOK.md
engine/: __init__.py
ingestion/: __init__.py  file_queue.py  normalize.py
release_audit/: .gitkeep  current_repo_state.json  local_fingerprint.json  release_conformance_report.json  version_inventory.json
scripts/: check_psl_snapshot.py  collect_runtime_fingerprint.py  compare_fingerprints.py  det_check.py  dump_expected.py  e2e_pipeline_check.py  generate_artifact_registry.py  generate_version_inventory.py  init_git.sh  local_audit.sh  package_test_vectors.py  path_safety.py  run_e2e_pipeline_test.sh  server_audit.sh  setup_repo.sh  show_expected.py
service/: __init__.py  runtime.py  version_info.py
tests/: test_api_smoke.py  test_ingestion_normalization.py  test_path_safety.py
worker/: __init__.py  main.py
(+33 files in other folders)
