[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dkp-ptl-reg-engine"
version = "0.6.0"
description = "Market Lens — Deterministic Price Transparency Engine (DKP-PTL-REG v0.6 Reference Implementation)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "anahronic"}
]

[project.scripts]
dkp-ptl-reg-engine = "engine.src.cli:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths = ["engine/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
