[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dkp-ptl-reg-engine"
version = "0.6.0"
description = "Market Lens — Deterministic Price Transparency Engine (DKP-PTL-REG v0.6 Reference Implementation)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "anahronic"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
dkp-ptl-reg-engine = "engine.src.cli:main"
market-lens-worker = "worker.main:main"

[tool.setuptools.packages.find]
include = ["engine*", "api*", "service*", "ingestion*", "worker*"]

[tool.pytest.ini_options]
testpaths = ["engine/tests", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
